test_deps = declare_dependency(compile_args: geany_cflags, dependencies: [deps, dep_libgeany])

ctags_tests= ['ctags/1795612.js',
              'ctags/1850914.js',
              'ctags/1878155.js',
              'ctags/1880687.js',
              'ctags/2023624.js',
              'ctags/3184782.sql',
              'ctags/3470609.js',
              'ctags/3526726.tex',
              'ctags/68hc11.asm',
              'ctags/actionscript/as-first-token.as',
              'ctags/actionscript/classes.as',
              'ctags/actionscript/const2.as',
              'ctags/actionscript/const.as',
              'ctags/actionscript/method-attributes.as',
              'ctags/actionscript/packages.as',
              'ctags/actionscript/sampler.as',
              'ctags/angle_bracket.cpp',
              'ctags/anonymous_functions.php',
              'ctags/arraylist.js',
              'ctags/array_ref_and_out.cs',
              'ctags/array_spec.f90',
              'ctags/array-spec.f90',
              'ctags/attributes.cs',
              'ctags/auto.f',
              'ctags/backslashes.c',
              'ctags/bit_field.c',
              'ctags/block.f90',
              'ctags/bracematch.js',
              'ctags/bug1020715.cpp',
              'ctags/bug1020715.c',
              'ctags/bug1086609.c',
              'ctags/bug1093123.cpp',
              'ctags/bug1111214-j-chan.v',
              'ctags/bug1111214.v',
              'ctags/bug1201689.c',
              'ctags/bug1447756.java',
              'ctags/bug1458930.c',
              'ctags/bug1466117.c',
              'ctags/bug1491666.c',
              'ctags/bug1515910.cs',
              'ctags/bug1548443.cpp',
              'ctags/bug1563476.cpp',
              'ctags/bug1570779.sql',
              'ctags/bug1575055.cpp',
              'ctags/bug1585745.cpp',
              'ctags/bug1611054.cs',
              'ctags/bug1691412.java',
              'ctags/bug1742588.rb',
              'ctags/bug1743330.v',
              'ctags/bug1764143.h',
              'ctags/bug1764148.py',
              'ctags/bug1770479.cpp',
              'ctags/bug1773926.cpp',
              'ctags/bug1777344.java',
              'ctags/bug1799340.cpp',
              'ctags/bug1799343-1.cpp',
              'ctags/bug1799343-2.cpp',
              'ctags/bug1800065.cs',
              'ctags/bug1809024.py',
              'ctags/bug1830343.cs',
              'ctags/bug1830344.cs',
              'ctags/bug1856363.py',
              'ctags/bug1906062.py',
              'ctags/bug1907083.cpp',
              'ctags/bug1924919.cpp',
              'ctags/bug1938565.sql',
              'ctags/bug1944150.sql',
              'ctags/bug1950327.js',
              'ctags/bug1988026.py',
              'ctags/bug1988027.py',
              'ctags/bug1988130.py',
              'ctags/bug2049723.java',
              'ctags/bug2075402.py',
              'ctags/bug2117073.java',
              'ctags/bug2374109.vhd',
              'ctags/bug2411878.cs',
              'ctags/bug2747828.v',
              'ctags/bug2777310.js',
              'ctags/bug2781264.rb',
              'ctags/bug2886870.tex',
              'ctags/bug2888482.js',
              'ctags/bug3036476.js',
              'ctags/bug3168705.py',
              'ctags/bug3571233.js',
              'ctags/bug507864.c',
              'ctags/bug538629.asm',
              'ctags/bug556645.c',
              'ctags/bug556646.c',
              'ctags/bug565813.f90',
              'ctags/bug612019.pas',
              'ctags/bug612621.pl',
              'ctags/bug620288.f',
              'ctags/bug639639.h',
              'ctags/bug639644.hpp',
              'ctags/bug665086.cpp',
              'ctags/bug670433.f90',
              'ctags/bug699171.py',
              'ctags/bug722501.sql',
              'ctags/bug726712.f90',
              'ctags/bug726875.f90',
              'ctags/bug734933.f90',
              'ctags/bug762027.v',
              'ctags/bug814263.java',
              'ctags/bug823000.sql',
              'ctags/bug842077.pl',
              'ctags/bug849591.cpp',
              'ctags/bug852368.cpp',
              'ctags/bug858165.f90',
              'ctags/bug872494.cpp',
              'ctags/bug877956.f90',
              'ctags/bug960316.v',
              'ctags/bug961001.v',
              'ctags/byte.f',
              'ctags/c-digraphs.c',
              'ctags/c-trigraphs.c',
              'ctags/case_sensitivity.php',
              'ctags/char-selector.f90',
              'ctags/classes.php',
              'ctags/cobol/helloworld.cbl',
              'ctags/cobol/helloworld2.cbl',
              'ctags/cobol/levels.cbl',
              'ctags/cobol/quoted-program-id.cbl',
              'ctags/cobol/simple.cbl',
              'ctags/common.f',
              'ctags/complex-return.js',
              'ctags/continuation.f90',
              'ctags/continuation.mak',
              'ctags/countall.sql',
              'ctags/cpp_destructor.cpp',
              'ctags/css-at-rules.css',
              'ctags/css-at-supports.css',
              'ctags/css-attribute-selectors.css',
              'ctags/css-comma-no-space.css',
              'ctags/css-namespace-selectors.css',
              'ctags/css-pseudo-classes.css',
              'ctags/css-simple.css',
              'ctags/css-singlequote-in-comment-issue2.css',
              'ctags/css-tag-types.css',
              'ctags/css-trivial.css',
              'ctags/cython_sample.pyx',
              'ctags/cython_sample2.pyx',
              'ctags/cxx11enum.cpp',
              'ctags/cxx11-final.cpp',
              'ctags/cxx11-noexcept.cpp',
              'ctags/cxx11-override.cpp',
              'ctags/cxx11-raw-strings.cpp',
              'ctags/cxx14-combined.cpp',
              'ctags/db-trig.sql',
              'ctags/debian_432872.f90',
              'ctags/directives.c',
              'ctags/dopbl2.f',
              'ctags/dotted-names.json',
              'ctags/enum.c',
              'ctags/enum.f90',
              'ctags/enum.java',
              'ctags/enumerators.f90',
              'ctags/events.cs',
              'ctags/extern_variable.h',
              'ctags/forall_module.f90',
              'ctags/format.pl',
              'ctags/fortran_associate.f90',
              'ctags/fortran_line_continuation.f90',
              'ctags/func_typedef.h',
              'ctags/geany.nsi',
              'ctags/general.cs',
              'ctags/hex2dec.sql',
              'ctags/implied_program.f',
              'ctags/indexer.cs',
              'ctags/infinite_loop.java',
              'ctags/ingres_procedures.sql',
              'ctags/initialization.f90',
              'ctags/interface_indexers.cs',
              'ctags/interface_properties.cs',
              'ctags/interfaces.f90',
              'ctags/internal.cs',
              'ctags/intro_orig.tex',
              'ctags/intro.tex',
              'ctags/invalid_name.f90',
              'ctags/java_enum.java',
              'ctags/js-broken-strings.js',
              'ctags/js-class-related-unterminated.js',
              'ctags/js-const.js',
              'ctags/js-implicit-semicolons.js',
              'ctags/js-let.js',
              'ctags/js-scope.js',
              'ctags/js-signature.js',
              'ctags/js-string-continuation.js',
              'ctags/js-sub-block-scope.js',
              'ctags/js-unknown-construct-nesting.js',
              'ctags/jsFunc_tutorial.js',
              'ctags/keyword_abstract.cs',
              'ctags/keyword_catch_try.cs',
              'ctags/keyword_class.cs',
              'ctags/keyword_const.cs',
              'ctags/keyword_delegate.cs',
              'ctags/keyword_enum.cs',
              'ctags/keyword_event.cs',
              'ctags/keyword_explicit.cs',
              'ctags/keyword_extern.cs',
              'ctags/keyword_implicit.cs',
              'ctags/keyword_interface.cs',
              'ctags/keyword_namespace.cs',
              'ctags/keyword_names.f90',
              'ctags/keyword_out.cs',
              'ctags/keyword_override.cs',
              'ctags/keyword_params.cs',
              'ctags/keyword_private.cs',
              'ctags/keyword_protected.cs',
              'ctags/keyword_public.cs',
              'ctags/keyword_sealed.cs',
              'ctags/keyword_static.cs',
              'ctags/keyword_struct.cs',
              'ctags/keyword_virtual.cs',
              'ctags/keyword_volatile.cs',
              'ctags/labels.sql',
              'ctags/lanus.for',
              'ctags/line_directives.c',
              'ctags/local.c',
              'ctags/macros.c',
              'ctags/make-comment-in-rule.mak',
              'ctags/make-gnumake-pattern-rules.mak',
              'ctags/make-multi-target.mak',
              'ctags/make-parentheses.mak',
              'ctags/make-target-with-parentheses.mak',
              'ctags/make-variable-on-cmdline.mak',
              'ctags/masm.asm',
              'ctags/matlab_backtracking.m',
              'ctags/matlab_test.m',
              'ctags/maze.erl',
              'ctags/members.f90',
              'ctags/misc_types.f90',
              'ctags/misc_types.f',
              'ctags/mode.php',
              'ctags/moniker.x68.asm',
              'ctags/namelist.f',
              'ctags/namespace.cpp',
              'ctags/namespaces2.php',
              'ctags/namespaces.php',
              'ctags/no_terminator.js',
              'ctags/non-ascii-ident1.php',
              'ctags/numlib.f90',
              'ctags/objectivec_implementation.mm',
              'ctags/objectivec_interface.mm',
              'ctags/objectivec_property.mm',
              'ctags/objectivec_protocol.mm',
              'ctags/Package.pm',
              'ctags/php5_5_class_kw.php',
              'ctags/parenthesis-rvalue.js',
              'ctags/preprocessor.f90',
              'ctags/procedure_pointer_module.f90',
              'ctags/procpoint.f90',
              'ctags/property.cs',
              'ctags/prototype.h',
              'ctags/pure_elem.f95',
              'ctags/py_constructor_arglist.py',
              'ctags/py-skipped-string.py',
              'ctags/python-anonymous-nestlevel_ctags-bug-356.py',
              'ctags/python-comments.py',
              'ctags/qualified_types.f90',
              'ctags/random.sql',
              'ctags/readlob.sql',
              'ctags/readlong.sql',
              'ctags/recursive.f95',
              'ctags/refcurs.sql',
              'ctags/regexp.js',
              'ctags/return-hint.zep',
              'ctags/return-types.go',
              'ctags/ruby-block-call.rb',
              'ctags/ruby-doc.rb',
              'ctags/ruby-namespaced-class.rb',
              'ctags/ruby-scope-after-anonymous-class.rb',
              'ctags/ruby-sf-bug-364.rb',
              'ctags/rules.t2t',
              'ctags/sample.t2t',
              'ctags/secondary_fcn_name.js',
              'ctags/semicolon.f90',
              'ctags/shebang.js',
              'ctags/signature.cpp',
              'ctags/simple.abc',
              'ctags/simple.asciidoc',
              'ctags/simple.bas',
              'ctags/simple.conf',
              'ctags/simple.d',
              'ctags/simple.diff',
              'ctags/simple.docbook',
              'ctags/simple.hs',
              'ctags/simple.hx',
              'ctags/simple.html',
              'ctags/simple.inp',
              'ctags/simple.js',
              'ctags/simple.json',
              'ctags/simple.ksh',
              'ctags/simple.lua',
              'ctags/simple.mak',
              'ctags/simple.md',
              'ctags/simple.php',
              'ctags/simple.pl',
              'ctags/simple.ps1',
              'ctags/simple.py',
              'ctags/simple.rb',
              'ctags/simple.rst',
              'ctags/simple.sh',
              'ctags/simple.tcl',
              'ctags/simple.vala',
              'ctags/simple.zep',
              'ctags/size_t_wchar_t_alias.d',
              'ctags/size_t_wchar_t_typedef.c',
              'ctags/spurious_label_tags.c',
              'ctags/sql_single_quote.sql',
              'ctags/square_parens.f90',
              'ctags/state_machine.v',
              'ctags/static_array.c',
              'ctags/stdcall.f',
              'ctags/strings.php',
              'ctags/strings.rb',
              'ctags/structure.f',
              'ctags/tabindent.py',
              'ctags/test.erl',
              'ctags/test.go',
              'ctags/test.py',
              'ctags/test.vhd',
              'ctags/test_input.rs',
              'ctags/test_input2.rs',
              'ctags/titles.t2t',
              'ctags/traffic_signal.v',
              'ctags/traits.php',
              'ctags/ui5.controller.js',
              'ctags/union.f',
              'ctags/value.f',
              'ctags/var-and-return-type.cpp',
              'ctags/whitespaces.php']

runner = find_program('ctags/runner.sh')
foreach t : ctags_tests
    test(t, runner,
         args: [join_paths(meson.build_root(), 'geany'),
                join_paths(meson.source_root(), '@0@.tags'.format(files(t)[0]))],
         env: ['top_srcdir='+meson.source_root(),
               'top_builddir='+meson.build_root()])
endforeach

test('utils', executable('test_utils', 'test_utils.c', dependencies: test_deps))
